fix: invisible buttons in playlist view

--- a/themes/ctp-latte/catppuccin-latte.scss
+++ b/themes/ctp-latte/catppuccin-latte.scss
@@ -255,7 +255,7 @@ body.body--light {
         color: var(--accent);
       }
 
-      .q-btn {
+      .q-btn.primary-actions {
         color: var(--base);
       }
 
