--- a/themes/ctp-mocha/catppuccin-mocha.scss
+++ b/themes/ctp-mocha/catppuccin-mocha.scss
@@ -255,7 +255,7 @@ body.body--dark {
         color: var(--accent);
       }
 
-      .q-btn {
+      .q-btn.primary-actions {
         color: var(--base);
       }
 
